k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-website-service
spec:
  selector:
    app: devops-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
